# DistributedMandelbrotGrid

./: README.md
worker/: CMakeLists.txt  build.sh  main.cpp
worker/mpir/: CMakeLists.txt  config.h  div.c  errno.c  extract-dbl.c  gmp_impl.h  gmpn_add.h  invalid.c  longlong.h  memory.c  mpir.c  mpir.h  mpir_inter_decl.h
worker/mpir/mpn/: CMakeLists.txt  add_n.c  divrem_1.c  divrem_2.c  divrem_euclidean_qr_1.c  divrem_euclidean_qr_2.c  divrem_euclidean_r_1.c  get_d.c  invert.c  mod_1.c  mul.c  mul_1.c  mul_n.c  neg_n.c  sqr_basecase.c  sub_n.c  tdiv_qr.c  toom3_mul.c  toom3_mul_n.c  toom4_mul.c  toom4_mul_n.c  toom8_sqr_n.c  toom8h_mul.c
worker/mpir_CUDA/: CMakeLists.txt  module_main.cu  mpir_CUDA.cu  mpir_CUDA.h  mpir_config.h
